[ui] Fix unreadable large numbers in pagination
Fixes the width of the page buttons to make all
numbers readable.

--- a/ui/src/styles/index.scss
+++ b/ui/src/styles/index.scss
@@ -112,12 +112,13 @@ $border-color: rgba(0, 0, 0, 0.12);
 .theme--light.v-pagination .v-pagination__item,
 .theme--light.v-pagination .v-pagination__navigation {
   box-shadow: none;
-  width: 32px;
+  min-width: 32px;
   height: 32px;
 }
 
 button.v-pagination__item {
   transition: none;
+  margin: 0.2rem;
 }
 
 .theme--light.v-pagination .v-pagination__item--active {
